--- a/package.json
+++ b/package.json
@@ -1,9 +1,24 @@
-"scripts": {
-  "start": "node your-script.js"
-}
 {
+  "name": "css-the-hacker-times-part-1",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
     "package-lock.json": "^1.0.0"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/georgefosterII/CSS-The-Hacker-Times-Part-1.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/georgefosterII/CSS-The-Hacker-Times-Part-1/issues"
+  },
+  "homepage": "https://github.com/georgefosterII/CSS-The-Hacker-Times-Part-1#readme"
 }
-
